# AVScan2Vec

./: .gitattributes  README.md  pyproject.toml  setup.cfg
avscan2vec/: __init__.py  char_embd.py  dataset.py  globalvars.py  utils.py
checkpoints/: avs.txt  checkpoint_finetune.sav  checkpoint_pretrain.sav  vocab.txt
scripts/: finetune_avscan2vec.py  generate_data.py  predict_vectors.py  pretrain_avscan2vec.py  query_vt_reports.py  tlsh_pairs.py
